almost finished views

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": ["./node_modules/html2pdf.js/dist/html2pdf.bundle.min.js"],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
