--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
