--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@angular/service-worker": "^16.1.0",
+    "chart.js": "^4.4.0",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "ng2-charts": "^5.0.3",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.27",
