load spinner, proxy api

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            
             "outputPath": "dist/app-control-plagas",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -63,6 +64,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "app-ControlPlagas:build:production"
@@ -76,12 +80,14 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
+            
             "browserTarget": "app-ControlPlagas:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            
             "polyfills": [
               "zone.js",
               "zone.js/testing"
@@ -103,6 +109,7 @@
         "cypress-run": {
           "builder": "@cypress/schematic:cypress",
           "options": {
+            "proxyConfig": "proxy.conf.json",
             "devServerTarget": "app-ControlPlagas:serve"
           },
           "configurations": {
