--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -27,7 +27,6 @@
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "ng2-charts": "^5.0.3",
-    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
