grafica, ubicacion y pdf casi finalizado

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@angular/service-worker": "^16.1.0",
+    "@canvasjs/angular-charts": "^1.0.3",
     "chart.js": "^4.4.0",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "ng2-charts": "^5.0.3",
