--- a/angular.json
+++ b/angular.json
@@ -65,8 +65,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "proxyConfig": "proxy.conf.json",
-            "ssl": true
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
