--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@angular/service-worker": "^16.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@canvasjs/angular-charts": "^1.0.3",
     "chart.js": "^4.4.0",
     "html2canvas": "^1.4.1",
